# panda-vllm-proxy

./: .dockerignore  .env.deepseek  .env.example  .env.llama  .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: release-alloy.yml  release-milvus-cron.yml  release-nginx.yml  release-vllm-ray.yml  release.yml
deployments/: 20250610_048f90f02_attestation.json  20250610_048f90f02_compose.json  20250610_04bafdec6_attestation.json  20250610_04bafdec6_compose.json  20250611_041e2c553_attestation.json  20250611_041e2c553_compose.json  20250611_0443f1b1d_attestation.json  20250611_0443f1b1d_compose.json  20250611_04e5e4ea5_attestation.json  20250611_04e5e4ea5_compose.json  20250612_0406dee44_attestation.json  20250612_0406dee44_compose.json  20250612_0412ea98e_attestation.json  20250612_04b99179e_attestation.json  20250612_04b99179e_compose.json  20250613_0422a623f_attestation.json  20250613_0422a623f_compose.json  20250613_046aa3759_attestation.json  20250613_046aa3759_compose.json  20250613_04c705fe5_attestation.json  20250613_04c705fe5_compose.json  20250613_04e1eabc9_attestation.json  20250613_04e1eabc9_compose.json  20250614_041f913e3_attestation.json  20250614_041f913e3_compose.json  20250614_04e1eabc9_attestation.json  20250616_04c5865f5_attestation.json  20250617_041407174_attestation.json  20250617_044a785cd_attestation.json  20250617_044ada3fe_attestation.json  20250617_044ada3fe_compose.json  20250617_048c6374b_attestation.json  20250617_04c2d538d_attestation.json  20250617_04c5865f5_compose.json  20250618_0401f342d_attestation.json  20250618_0401f342d_compose.json  20250618_045685cb7_attestation.json  20250618_045685cb7_compose.json  20250618_045fddcae_attestation.json  20250618_047af1b61_attestation.json  (+21 more)
docker/: Dockerfile  build.sh  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml
docker/alloy/: Dockerfile  config.alloy
docker/local/: README.md  cert.pem  docker-compose.local.yml  key.pem  mock_vllm.Dockerfile  test.html
docker/milvus/: .env.example  Dockerfile  milvus.yaml
docker/milvus/cron/: compaction.py  cron.py
docker/nginx/: Dockerfile  certbot.toml.template  entrypoint.sh  nginx.conf.template
docker/vllm-ray/: Dockerfile  modify-tokenizer.sh
redis/: docker-compose.yaml  run.sh
src/: entrypoint.sh  run.py
src/app/: config.py  dependencies.py  logger.py  main.py  middleware.py  milvus.py
src/app/actions/: README.md  models.py  registry.py
src/app/actions/pdf/: __init__.py  pdf.py  utils.py
src/app/actions/search/: __init__.py  models.py  search.py  utils.py
src/app/actions/tool_calls/: get_tools.py
src/app/api/: __init__.py
src/app/api/helper/: auth.py  format_sse.py  get_system_prompt.py  request_classification.py  request_llm.py  request_summary.py  streaming.py
src/app/api/response/: response.py
src/app/api/v1/: __init__.py  info.py  model.py  models.py  openai.py  schemas.py  summary.py
src/app/cache/: cache.py  local_cache.py  redis.py
src/app/config/: constants.py  cors.py
src/app/prompts/: prompts.py
src/app/rag/: __init__.py  pdf_parser.py  summarizing_llm.py  web_retriever.py
tests/: __init__.py  conftest.py
tests/app/: __init__.py  test_auth.py  test_helpers.py  test_openai.py  test_summary.py
tests/app/actions/search/: test_search_integration.py
tests/mock/: __init__.py  mock_vllm.py
verification/verify-attestation/: requirements.txt  verify.py
