[tool.poetry]
name = "vllm-proxy"
version = "0.2.1"
description = ""
authors = ["sm-stack"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "=3.11.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
web3 = "^7.6.0"
eth-account = "^0.13.4"
eth-utils = "^5.1.0"
cryptography = "^43.0.1"
redis = "^5.2.1"
PyJWT = "^2.7.0"
python-dotenv = "^1.1.0"
slowapi = "^0.1.9"
rake-nltk = "^1.0.6"
duckduckgo-search = "^8.0.1"
numpy = "^2.2.5"
bs4 = "^0.0.2"
pypdf = "^5.4.0"
pdf2image = "^1.17.0"
httpx = "^0.28.1"
pydantic-settings = "^2.9.1"
transformers = {git = "https://github.com/huggingface/transformers", rev = "v4.51.3-Qwen2.5-Omni-preview"}
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
respx = "^0.22.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
