[tool.poetry]
name = "vllm-proxy"
version = "0.2.1"
description = ""
authors = ["sm-stack"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "=3.11.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
web3 = "^7.6.0"
eth-account = "^0.13.4"
eth-utils = "^5.1.0"
cryptography = "^43.0.1"
PyJWT = "^2.7.0"
python-dotenv = "^1.1.0"
slowapi = "^0.1.9"
rake-nltk = "^1.0.6"
duckduckgo-search = "^8.0.1"
pypdf = "^5.4.0"
pdf2image = "^1.17.0"
httpx = "^0.28.1"
pydantic-settings = "^2.9.1"
gunicorn = "^23.0.0"
langchain = "0.3.25"
langchain-text-splitters = "0.3.8"
langchain-community = "0.3.24"
html2text = "^2025.4.15"
beautifulsoup4 = "^4.13.4"
pymupdf = "^1.25.5"
rapidocr-onnxruntime = "^1.4.4"
pymilvus = {extras = ["model"], version = "^2.5.10"}
langchain-huggingface = "^0.2.0"
langchain-milvus = "^0.1.10"
sentence-transformers = "^4.1.0"
peft = "^0.15.2"
flagembedding = "^1.3.5"
logfmt = "^0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
respx = "^0.22.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
